# Image2Splat

./: .gitignore  FACETING_FINDINGS.md  INSTALL.md  LICENSE  README.md  pyproject.toml  setup.sh
bat/: Autocrop.bat  ProbePull.bat  Start Dashboard.bat  Start Splat Daemon.bat  Start Upscale.bat
docs/: DAEMON_TIER_PROBE_DESIGN.md  EVAL_SESSION_2026-05-20.md
patches/: README.md  pixal3d_smooth_normals.patch
scripts/: autocrop.py  dashboard.py  diagnose_facets.py  fix_colmap_postshot11.py  hotfolder_daemon.py  mesh_smooth.py  probe_tier_validation.py  probepull.py  quick_splat.py  rank_seeds.py  run_autocrop.sh  run_hotfolder.sh  run_hotfolder_watchdog.sh  setup_env.sh  upscale_views_pid.py
src/: backbone.py  cameras.py  export_colmap.py  export_nerfstudio.py  hdri_io.py  mesh_export.py  polish.py  render.py
upscale/: run_upscale.sh  upres.py
