[project]
name = "image_to_splat"
version = "0.1.0"
description = "Single image to multi-view synthetic dataset for Gaussian splat training, via TRELLIS.2"
requires-python = ">=3.10,<3.12"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pillow>=10.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "tqdm>=4.66",
    "tyro>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
image-to-splat = "image_to_splat_dataset:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
